<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ns2_round"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTimer"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="148dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/seconds"
        android:inputType="number|textPersonName"
        android:maxLength="3"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editTextTimeBPoint"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:padding="10dp"
        android:text="@string/Time_between_rounds"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTrail"
        app:layout_constraintStart_toStartOf="@+id/textViewTimeBPoint"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintVertical_bias="0.92" />

    <EditText
        android:id="@+id/email"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="30"
        android:text=""
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerTrail"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTrail"
        app:layout_constraintVertical_bias="0.013" />

    <Button
        android:id="@+id/buttondisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="disconnectFirebase"
        android:text="@string/disconnected"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonconnect"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="connectFirebase"
        android:text="@string/connect"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="20"
        android:text=""
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textViewShowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:padding="10dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/copyRight"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="@+id/textViewTimeBPoint"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textViewShowID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/copyRight"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="@+id/textViewTimeBPoint"
        app:layout_constraintTop_toBottomOf="@+id/textViewShowName" />

    <TextView
        android:id="@+id/textViewShowTrail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textViewShowName"
        app:layout_constraintEnd_toStartOf="@+id/Next"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.23" />

    <Switch
        android:id="@+id/switchfirebaselocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:minHeight="48dp"
        android:text="@string/loc"
        app:layout_constraintEnd_toStartOf="@+id/switchP2P"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toEndOf="@+id/spinnerTrail"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimeBPoint" />

    <Switch
        android:id="@+id/switchP2P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:minHeight="48dp"
        android:text="@string/P2P"
        app:layout_constraintEnd_toEndOf="@+id/editTextTimeBPoint"
        app:layout_constraintTop_toBottomOf="@+id/editTextTimeBPoint" />

    <Button
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="comfigureNextButton"
        android:text="@string/Next"
        app:layout_constraintBottom_toTopOf="@+id/copyRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchfirebaselocal"
        app:layout_constraintVertical_bias="0.754"
        tools:ignore="OnClick" />

    <Spinner
        android:id="@+id/spinnerTrail"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/switchfirebaselocal"
        app:layout_constraintEnd_toStartOf="@+id/switchP2P"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTimeBPoint"
        app:layout_constraintTop_toBottomOf="@+id/editTextTimeBPoint"
        app:layout_constraintVertical_bias="0.966"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/copyRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/copyright"
        android:textColor="#616161"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fullname"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="20"
        android:text=""
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textViewTimeBPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:padding="10dp"
        android:text="@string/timeBetweenPoints"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewID"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/editTextTimeBPoint"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/milliseconds"
        android:inputType="number|textPersonName"
        android:maxLength="3"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonID"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="@string/id"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <EditText
        android:id="@+id/editTextTextPersonID"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number|textPersonName"
        android:maxLength="9"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName"
        tools:ignore="DuplicateSpeakableTextCheck" />

</android.support.constraint.ConstraintLayout>