<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityUpload">

    <Spinner
        android:id="@+id/spinnerPoint"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:contentDescription="@string/Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <TextView
        android:id="@+id/textViewNameFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uploadFile"
        android:text="@string/upload"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/spinnerPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameFile"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/textViewUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpload" />

    <ProgressBar
        android:id="@+id/progressBarUpload2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:indeterminateTint="@color/blue"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonUpload"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/buttonStartAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="comfigureNextButton"
        android:text="@string/startagain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPoint"
        app:layout_constraintVertical_bias="0.511" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="closeApp"
        android:text="@string/Exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPoint"
        app:layout_constraintVertical_bias="0.511" />

    <Button
        android:id="@+id/buttonconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="connectionToDrive"
        android:text="@string/connection"
        app:layout_constraintBottom_toTopOf="@+id/spinnerPoint"
        app:layout_constraintStart_toEndOf="@+id/buttonUpload"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameFile"
        app:layout_constraintVertical_bias="0.075" />

</android.support.constraint.ConstraintLayout>