<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenP2P">

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        android:onClick="comfigureUploadScreen"
        android:text="@string/stop"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nameAndId"
        android:layout_width="358dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewtouch"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewPointBlue"
        android:layout_width="38dp"
        android:layout_height="34dp"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewtouch"
        app:layout_constraintTop_toBottomOf="@+id/nameAndId"
        app:layout_constraintVertical_bias="0.634"
        app:srcCompat="@drawable/ic_action_name_blue"
        tools:layout_editor_absoluteX="186dp" />

    <ImageView
        android:id="@+id/imageViewPointRed"
        android:layout_width="38dp"
        android:layout_height="34dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo1"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPointBlue"
        app:layout_constraintTop_toBottomOf="@+id/nameAndId"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_action_name_read"
        tools:layout_editor_absoluteX="186dp" />

    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="start"
        android:text="@string/Start"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewtouch"
        app:layout_constraintEnd_toEndOf="@+id/textViewtouch"
        app:layout_constraintStart_toStartOf="@+id/textViewtouch" />

    <TextView
        android:id="@+id/editTime"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:text="@string/Start"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewtouch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAndId"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>